# rrs

./: .gitignore  Cargo.toml  README.md
bks/asyncbk/ch1_getstarted/ch1_3_async_await/: Cargo.toml
bks/asyncbk/ch2_executer_future_task/ch2_2to4_example_impl/: Cargo.toml
bks/asyncbk/ch9_http_server/ch9_1to3_http_server/: Cargo.toml
bks/rsbk/: README.md
bks/rsbk/ch1/ch1_2_hello_world/: Makefile  main.rs
bks/rsbk/ch1/ch1_3_hello_cargo/: Cargo.toml
bks/rsbk/ch10_generics/ch10_1_generic_data_types/: Cargo.toml
bks/rsbk/ch10_generics/ch10_2_traits/: Cargo.toml
bks/rsbk/ch10_generics/ch10_3_lifetime/: Cargo.toml
bks/rsbk/ch11_tests/ch11_1_write_tests/: Cargo.toml
bks/rsbk/ch12_io_project/ch12_rsgrep/: Cargo.toml  qwerty.txt
bks/rsbk/ch13_clousures/ch13_1_clousure_anonym_func/: Cargo.toml
bks/rsbk/ch13_clousures/ch13_2_interators/: Cargo.toml
bks/rsbk/ch13_clousures/ch13_3_improved_rsgrep/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_1_box_t/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_2_deref_treat/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_3_drop_treat/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_4_ref_count_t/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_5_ref_cell_t/: Cargo.toml
bks/rsbk/ch15_smart_pointer/ch15_6_ref_cycles_leak/: Cargo.toml
bks/rsbk/ch16_concurrency/ch16_1_threads/: Cargo.toml
bks/rsbk/ch16_concurrency/ch16_2_message_passing/: Cargo.toml
bks/rsbk/ch16_concurrency/ch16_3_shared_state/: Cargo.toml
bks/rsbk/ch17_oop/ch17_2_trait_obj/: Cargo.toml
bks/rsbk/ch17_oop/ch17_3_oop_patern/: Cargo.toml
bks/rsbk/ch19_advanced/ch19_2_traits/: Cargo.toml
bks/rsbk/ch19_advanced/ch19_4_fn_and_clousure/: Cargo.toml
bks/rsbk/ch19_advanced/ch19_5_macros/: Cargo.toml
bks/rsbk/ch2/ch2_guessing_game/: Cargo.toml
bks/rsbk/ch20_web_server/ch20_1to3_webserver/: Cargo.toml
bks/rsbk/ch3/ch3_1_var_and_mutab/: Cargo.toml
bks/rsbk/ch3/ch3_5_control_flow/: Cargo.toml
bks/rsbk/ch3_common/ch3_1_var_and_mutab/: Cargo.toml
bks/rsbk/ch3_common/ch3_2_data_types/: Cargo.toml
bks/rsbk/ch3_common/ch3_3_functions/: Cargo.toml
bks/rsbk/ch3_common/ch3_5_control_flow/: Cargo.toml
bks/rsbk/ch4/ch4_1_ownership/: Cargo.toml
bks/rsbk/ch4/ch4_3_slice/: Cargo.toml
bks/rsbk/ch4_ownership/ch4_1_ownership/: Cargo.toml
bks/rsbk/ch4_ownership/ch4_2_reference/: Cargo.toml
bks/rsbk/ch4_ownership/ch4_3_slice/: Cargo.toml
bks/rsbk/ch5/ch5_2_using_structs/: Cargo.toml
bks/rsbk/ch5_struct/ch5_1_struct_def/: Cargo.toml
play/src/: main.rs
rsstart/: Cargo.toml  README.md
rsstart/src/: main.rs
spec/copymove/base/: Cargo.toml
(+62 files in other folders)
