[workspace]
resolver = "2"

members = [
  "rsstart",
  "bks/rsbk/ch1/ch1_3_hello_cargo",
  "bks/rsbk/ch2/ch2_guessing_game",
  "bks/rsbk/ch3_common/ch3_1_var_and_mutab",
  "bks/rsbk/ch3_common/ch3_2_data_types",
  "bks/rsbk/ch3_common/ch3_3_functions",
  "bks/rsbk/ch3_common/ch3_5_control_flow",
  "bks/rsbk/ch4_ownership/ch4_1_ownership",
  "bks/rsbk/ch4_ownership/ch4_2_reference",
  "bks/rsbk/ch4_ownership/ch4_3_slice",
  
  "bks/rsbk/ch5_struct/ch5_1_struct_def",
	"bks/rsbk/ch5_struct/ch5_2_using_structs",
	"bks/rsbk/ch5_struct/ch5_3_struct_methods",
	"bks/rsbk/ch6_enum/ch6_1_enum",
	"bks/rsbk/ch6_enum/ch6_2_match",
	"bks/rsbk/ch8_collections/ch8_1_vectors",
	"bks/rsbk/ch8_collections/ch8_2_strings",
	"bks/rsbk/ch8_collections/ch8_3_hashmap",
	"bks/rsbk/ch9_errors/ch9_2_recoverable_errors",
  "bks/rsbk/ch10_generics/ch10_1_generic_data_types",
	"bks/rsbk/ch10_generics/ch10_2_traits",
	"bks/rsbk/ch10_generics/ch10_3_lifetime",
	"bks/rsbk/ch11_tests/ch11_1_write_tests",
	"bks/rsbk/ch12_io_project/ch12_rsgrep",
	"bks/rsbk/ch13_clousures/ch13_1_clousure_anonym_func",
	"bks/rsbk/ch13_clousures/ch13_2_interators",
	"bks/rsbk/ch13_clousures/ch13_3_improved_rsgrep",
	

  "bks/rsbk/ch17_oop/ch17_3_oop_patern", "bks/rsbk/ch19_advanced/ch19_2_traits", "bks/rsbk/ch19_advanced/ch19_4_fn_and_clousure", "bks/rsbk/ch19_advanced/ch19_5_macros/derive", "bks/rsbk/ch19_advanced/ch19_5_macros", "bks/rsbk/ch20_web_server/ch20_1to3_webserver",
]
